--- a/public/css/main.css
+++ b/public/css/main.css
@@ -301,7 +301,7 @@ button:hover {
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 2vmin;
-  gap:1vmin;
+  gap: 1vmin;
 }
 
 .characters {
@@ -316,14 +316,11 @@ button:hover {
 }
 
 .character-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
   overflow: hidden;
   border-radius: 1vmin; 
-  width: 30vmin; 
-  height: 30vmin;
+  width: 90%; 
+  height: 70%;
   margin-top: 1vmin;
 }
 
@@ -334,6 +331,12 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%; 
+}
+
+.character-txt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .characters a {
@@ -353,16 +356,54 @@ button:hover {
   justify-content: center;
   gap: 1vmin;
   padding: .5vmin .5vmin;
-  border: .3vmin solid #043142;
+  border: .2vmin solid #043142;
   border-radius: 1vmin;
   width: 28vmin;
   background-color: #eff5f7;
+  text-decoration: none;
+  color: #043142;
 }
 
 .button-wrapper a {
-  text-decoration: none; 
+  text-decoration: none;
   color: #043142;
 }
+
+.delete {
+  background-color: #043142;
+  color: #eff5f7;
+  height: 3vmin;
+  font-size: 1em;
+}
+
+.submit {
+  height: 5vmin;
+  width: 51.5vmin;
+  font-size: 1.25em;
+}
+
+.show {
+  margin-bottom: 4vmin;
+}
+
+.show-character {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1vmin;
+  height: 40vmin;
+  width: 40vmin;
+  overflow: hidden;
+}
+
+.show-character img { 
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+}
+
 
 @media only screen and (max-width: 1024px) {
   #monsters {
