--- a/views/players/edit.ejs
+++ b/views/players/edit.ejs
@@ -8,39 +8,43 @@
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body>
-    <!-- Home Page's Content -->
+<body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <%- include('../partials/header.ejs') %>
         <div class="wrapper">
-            <h1>Add a Player Charater</h1>
-            <form action="/players/<%= player._id %>?_method=PUT" method="POST">
-                <label for="character-name">Character Name:</label>
-                <input type="text" name="charName" id="charName" value="<%= player.charName %>" required/>
+            <div class="player">
+                <div class="player-items">
+                    <h1>Add a Player Charater</h1>
+                    <form id="playerEdit" action="/players/<%= player._id %>?_method=PUT" method="POST">
+                        <label for="character-name">Character Name:</label>
+                        <input type="text" name="charName" id="charName" value="<%= player.charName %>" required />
 
-                <label for="character-image">Character Image:</label>
-                <input type="url" name="charImg" id="charImg" value="<%= player.charImg %>" />
-              
-                <label for="character-class">Character Class:</label>
-                <select type="class" name="charClass" id="charClass">
-                    <% characterClasses.forEach(classOption => { %>
-                        <option <%= player.charClass === classOption ? 'selected' : '' %> value="<%= classOption %>"><%= classOption %></option>
-                    <% }) %>
-                </select>
-              
-                <label for="character-level">Character Level:</label>
-                <input type="number" name="charLevel" id="charLevel" value="<%= player.charLevel %>" required/>
+                        <label for="character-image">Character Image:</label>
+                        <input type="url" name="charImg" id="charImg" value="<%= player.charImg %>" />
 
-                <label for="character-hp">Character HP:</label>
-                <input type="number" name="hp" id="charLevel" value="<%= player.hp %>" required/>
+                        <label for="character-class">Character Class:</label>
+                        <select type="class" name="charClass" id="charClass">
+                            <% characterClasses.forEach(classOption=> { %>
+                                <option <%=player.charClass===classOption ? 'selected' : '' %> value="<%= classOption %>">
+                                    <%= classOption %>
+                                </option>
+                                <% }) %>
+                        </select>
 
-                <label for="character-ac">Character AC:</label>
-                <input type="number" name="ac" id="ac" value="<%= player.ac %>" required/>
+                        <label for="character-level">Character Level:</label>
+                        <input type="number" name="charLevel" id="charLevel" value="<%= player.charLevel %>" required />
 
-                <label for="character-party">Party Name:</label>
-                <input type="string" name="partyName" id="partyName" value="<%= player.partyName %>" autocomplete="on"/>
-        
-                <button type="submit">Submit Changes</button>
-              </form>
+                        <label for="character-hp">Character HP:</label>
+                        <input type="number" name="hp" id="charLevel" value="<%= player.hp %>" required />
+
+                        <label for="character-ac">Character AC:</label>
+                        <input type="number" name="ac" id="ac" value="<%= player.ac %>" required />
+
+                        <label for="character-party">Party Name:</label>
+                        <input type="string" name="partyName" id="partyName" value="<%= player.partyName %>" />
+                    </form>
+                    <button type="submit" class="button-wrapper submit" form="playerEdit">Submit Changes</button>
+                </div>
+            </div>
         </div>
         <%- include('../partials/footer.ejs') %>
 
