--- a/public/css/main.css
+++ b/public/css/main.css
@@ -404,6 +404,10 @@ button:hover {
   height: 100%; 
 }
 
+.encounter {
+  padding-bottom: 3vmin;
+}
+
 
 @media only screen and (max-width: 1024px) {
   #monsters {
