--- a/views/encounters/index.ejs
+++ b/views/encounters/index.ejs
@@ -11,7 +11,7 @@
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <%- include('../partials/header.ejs') %>
         <div class="wrapper">
-            <div class="player encounter">
+            <div class="player pad-btm">
                 <div class="player-items">
                     <h1>Encounters</h1>
                     <a href="/encounters/new">Add an Encounter</a>
