--- a/views/monsters/edit.ejs
+++ b/views/monsters/edit.ejs
@@ -107,7 +107,7 @@
                                                 id="abilities-description-0" />
                                             <% } %>
                         </div>
-                        <button type="button" onclick="addAbility()">Add Another Ability</button>
+                        <button type="button" class="add" onclick="addAbility()">Add Another Ability</button>
                         <button type="submit">Update Monster</button>
                     </form>
                 </div>
