--- a/views/monsters/index.ejs
+++ b/views/monsters/index.ejs
@@ -10,8 +10,8 @@
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
     <%- include('../partials/header.ejs') %>
-        <div class="center">
-            <div class="player">
+        <div class="wrapper">
+            <div class="player pad-btm">
                 <div class="player-items">
                     <h1>Monsters</h1>
                     <a href="/monsters/new">Add a Monster</a>
