--- a/views/monsters/new.ejs
+++ b/views/monsters/new.ejs
@@ -60,7 +60,7 @@
                             <label for="abilities-description-0">Description:</label>
                             <input type="text" name="details[abilities][0][description]" id="abilities-description-0" />
                         </div>
-                        <button type="button" onclick="addAbility()">Add Another Ability</button>
+                        <button type="button" class="add" onclick="addAbility()">Add Another Ability</button>
                         <button type="submit">Add Monster to List</button>
                 </div>
             </div>
