--- a/views/encounters/edit.ejs
+++ b/views/encounters/edit.ejs
@@ -18,7 +18,7 @@
                         <label for="encounter-name">Encounter Name:</label>
                         <input type="text" name="name" id="name" value="<%= encounter.name %>" required />
 
-                        <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
+                        <p class="full-col">Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
 
                         <div class="wrapper center">
                             <label for="players">Players:</label>
